--- a/success/index.html
+++ b/success/index.html
@@ -18,17 +18,19 @@
       <a class="spanish-btn" href="/" style="text-decoration:none">
         Submit another vehicle
       </a>
-      <a class="ghost-btn" href="https://DEALER_SITE_URL_TBD/" target="_blank" 
+      <a class="ghost-btn" href="https://www.quirkchevy.com" target="_blank" 
          rel="noopener noreferrer" style="text-decoration:none">
         Back to Quirk Chevrolet Braintree
       </a>
     </div>
 
-     <!-- Logo inside same white card -->
-  <div style="margin-top:32px; text-align:center;">
-    <a href="https://DEALER_SITE_URL_TBD/" target="_blank" rel="noopener noreferrer">
-      <img src="/assets/quirkworks-new.jpg" alt="Quirk Works Logo"
-           style="width:100%; max-width:720px; height:auto; display:block; margin:0 auto; cursor:pointer;" />
-    </a>
-  </div>
-
+    <!-- Logo inside same white card -->
+    <div style="margin-top:32px; text-align:center;">
+      <a href="https://www.quirkchevy.com" target="_blank" rel="noopener noreferrer">
+        <img src="/assets/quirkworks-new.jpg" alt="Quirk Works Logo"
+             style="width:100%; max-width:720px; height:auto; display:block; margin:0 auto; cursor:pointer;" />
+      </a>
+    </div>
+  </main>
+</body>
+</html>
