--- a/success/index.html
+++ b/success/index.html
@@ -3,23 +3,25 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Thanks! - Quirk Chevrolet Braintree</title>
+  <title data-i18n="successTitle">Thanks! - Quirk Chevrolet Braintree</title>
   <link rel="stylesheet" href="/assets/styles.css" />
 </head>
 <body>
   <main style="max-width:720px;margin:40px auto;background:#fff;padding:24px;
                border-radius:12px;box-shadow:0 4px 10px rgba(0,0,0,0.1)">
-    <h1 style="text-align:center;margin:0 0 10px;color:#004a2f">Thank you!</h1>
-    <p style="text-align:center;font-size:16px">
+    <h1 style="text-align:center;margin:0 0 10px;color:#004a2f" data-i18n="successHeading">
+      Thank you!
+    </h1>
+    <p style="text-align:center;font-size:16px" data-i18n="successMessage">
       We received your trade-in details. A Quirk Chevrolet Braintree specialist will contact you shortly.
     </p>
 
     <div style="display:flex;gap:10px;justify-content:center;margin-top:18px">
-      <a class="spanish-btn" href="/" style="text-decoration:none">
+      <a class="spanish-btn" href="/" style="text-decoration:none" data-i18n="submitAnother">
         Submit another vehicle
       </a>
       <a class="ghost-btn" href="https://www.quirkchevy.com" target="_blank" 
-         rel="noopener noreferrer" style="text-decoration:none">
+         rel="noopener noreferrer" style="text-decoration:none" data-i18n="backToDealer">
         Back to Quirk Chevrolet Braintree
       </a>
     </div>
@@ -32,5 +34,8 @@
       </a>
     </div>
   </main>
+
+  <!-- Load the same app.js to enable Spanish translation -->
+  <script src="/assets/app.js"></script>
 </body>
 </html>
