--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
     </div>
 
     <button type="submit" id="submitBtn" data-i18n="submit">Get My Trade Appraisal</button>
-    <div class="smallprint">By submitting, you agree to be contacted by Quirk Chevrolet of Braintree. We won't spam you.</div>
+    <div class="smallprint">By submitting, authorization is given for Quirk Chevrolet to contact you about your vehicle's appraisal. We respect your privacy and will not send unwanted messages.</div>
   </form>
 
   <div id="toast" class="toast" role="status" aria-live="polite"></div>
