--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
     <fieldset class="section">
       <legend class="visually-hidden">Vehicle Condition</legend>
-      <h2 data-i18n="vehCondition">Vehicle Condition</h2>
+      <h2 data-i18n="vehCondition">Tell us about your Vehicle</h2>
       <label for="warnings" data-i18n="warnings">Any warning lights on dashboard?</label>
       <select id="warnings" name="warnings"><option>No</option><option>Yes</option></select>
       <label for="mech" data-i18n="mech">Mechanical issues</label>
