--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sight Unseen Trade-In – Quirk Chevrolet (Braintree, MA)</title>
+  <title>Sight Unseen Trade-In – Quirk Chevrolet</title>
   <meta name="robots" content="noindex" />
   <link rel="preconnect" href="https://vpic.nhtsa.dot.gov" />
   <link rel="stylesheet" href="assets/styles.css?v=2" />
