--- a/success/index.html
+++ b/success/index.html
@@ -9,14 +9,14 @@
 <body
   style="
     min-height:100vh;
-    /* Much darker overlay so the background image is muted */
+    /* Lighter overlay so the background image is more visible */
     background:
-      linear-gradient(rgba(0,0,0,.70), rgba(0,0,0,.70)),
+      linear-gradient(rgba(0,0,0,.35), rgba(0,0,0,.35)),
       url('/assets/quirk-lot.png') center / cover no-repeat fixed;
   "
 >
   <main style="max-width:720px;margin:40px auto;
-               background:rgba(255,255,255,0.92); /* add slight transparency */
+               background:rgba(255,255,255,0.92);
                padding:24px;
                border-radius:12px;
                box-shadow:0 4px 10px rgba(0,0,0,0.1)">
