--- a/success/index.html
+++ b/success/index.html
@@ -5,31 +5,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title data-i18n="successTitle">Thanks! - Quirk Chevrolet MA</title>
   <link rel="stylesheet" href="/assets/styles.css" />
+
+  <style>
+    /* Base layout: center the card on larger screens */
+    body.success {
+      min-height: 100vh;
+      display: flex;
+      align-items: center;          /* vertical centering */
+      justify-content: center;      /* horizontal centering */
+      padding: 40px 16px;           /* breathing room */
+      /* Lighter overlay so the background image is more visible */
+      background:
+        linear-gradient(rgba(0,0,0,.35), rgba(0,0,0,.35)),
+        url('/assets/quirk-lot.png') center / cover no-repeat fixed;
+    }
+    main.success-card {
+      max-width: 720px;
+      width: 100%;
+      background: rgba(255,255,255,0.92);
+      padding: 24px;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
+
+    /* Mobile-only: move card near the top & increase card opacity slightly */
+    @media (max-width: 640px) {
+      body.success {
+        align-items: flex-start;  /* push the card toward the top */
+        padding-top: 16px;        /* small offset from the very top */
+      }
+      main.success-card {
+        background: rgba(255,255,255,0.96); /* a touch more opaque on mobile */
+      }
+    }
+  </style>
 </head>
-<body
-  style="
-    min-height:100vh;
-
-    /* Center the success card vertically & horizontally */
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    padding:40px 16px; /* breathing room on small screens */
-
-    /* Lighter overlay so the background image is more visible */
-    background:
-      linear-gradient(rgba(0,0,0,.35), rgba(0,0,0,.35)),
-      url('/assets/quirk-lot.png') center / cover no-repeat fixed;
-  "
->
-  <main style="
-      max-width:720px;
-      width:100%;
-      background:rgba(255,255,255,0.92);
-      padding:24px;
-      border-radius:12px;
-      box-shadow:0 4px 10px rgba(0,0,0,0.1);
-    ">
+<body class="success">
+  <main class="success-card">
     <h1 style="text-align:center;margin:0 0 10px;color:#004a2f" data-i18n="successHeading">
       Thank you!
     </h1>
